<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageViewFon2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePlayWin"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:scaleType="centerCrop"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:src="@drawable/playwin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/news"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonFavourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePlayWin"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFavourite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/favourite"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonOffer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNews" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="OFFER"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavourite" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:text="@string/settings"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="42sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOffer" />

</androidx.constraintlayout.widget.ConstraintLayout>